changing Java 21 to 17 and fixing code acc to that